# Cmake-Learning

./: README.md  calculator1  main.c  main_1.c
modules1/: CMakeLists.txt  a.out  div.c  main.c  print.c  print.h
modules2/: CMakeLists.txt  add.c  div.c  div.h  main.c  print.c
modules2/my_builder/: CMakeCache.txt  Makefile  cmake_install.cmake  duplicate_calculator
modules3/: a.out  main.c
modules3/my_math_dir/: CMakeLists.txt  Makefile
modules3/my_math_dir/src/: add.c  div.c
modules3/my_print_dir/: CMakeLists.txt  Makefile
modules3/my_print_dir/src/: print.c
modules4/: CMakeLists.txt  cmakelist_example.txt  cmakelists.txt  readme.txt
modules5/: CMakeLists.txt  cmakelist_function.txt  cmakelist_loops.txt  cmakelists_binary_test.txt  cmakelists_unary_test.txt
modules6/: CMakeLists.txt  README
modules6/my_math_dir/: CMakeLists.txt
modules6/my_math_dir/src/: add.cpp  div.cpp
modules7/: CMakeLists.txt  README
modules7/my_math_dir/: CMakeLists.txt
modules7/my_math_dir/inc/my_math/: add.h
modules7/my_print_dir/: CMakeLists.txt
test_math_lib/: CMakeLists.txt  main.cpp
using-opencv/: CMakeLists.txt  main.cpp
